@@ -6,7 +6,7 @@ MODE=api-server
 
 source $BIN_PATH/config.sh
 
-JVMOPTS="-server -Xms64m -Xmx2g -XX:NewSize=512m -Xss512k -XX:+UseConcMarkSweepGC -XX:+UseParNewGC"
+JVMOPTS="-server -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=$4"
 JVMARGS="-Dmode=$MODE -Dserver.port=$HTTP_PORT"
 
 source $BIN_PATH/common.sh
